--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,15 @@
 
 export(baseEstimate)
 export(dataGenerate)
+export(defineModel)
 export(ensemble)
+export(estimation)
+export(genericFormula)
+export(infoMat)
 export(kernelGenerate)
-export(kernelTest)
-export(multiScore)
+export(noiseEstimate)
+export(scoreStat)
+export(testing)
 export(tuning)
 import(MASS)
 import(limSolve)
