--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,30 @@ export(compute_info)
 export(compute_stat)
 export(define_model)
 export(ensemble)
+export(ensemble_avg)
+export(ensemble_erm)
+export(ensemble_exp)
 export(estimate_base)
 export(estimate_noise)
 export(estimation)
 export(generate_data)
 export(generate_formula)
 export(generate_kernel)
+export(kernel_intercept)
+export(kernel_linear)
+export(kernel_matern)
+export(kernel_nn)
+export(kernel_polynomial)
+export(kernel_rational)
+export(kernel_rbf)
+export(test_asym)
+export(test_boot)
 export(testing)
 export(tuning)
+export(tuning_AICc)
+export(tuning_GCVc)
+export(tuning_gmpml)
+export(tuning_loocv)
 import(MASS)
 import(limSolve)
 import(mvtnorm)
